--- a/style.css
+++ b/style.css
@@ -1,43 +1,46 @@
-body{
-    margin: 0;
-    background-color: gray;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+  background-color: gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
 }
 
-.letter{
-    max-width: 600px;
-    box-shadow: 4px 4px 20px;
-    position: relative;
-    border-radius: 0.3em;
+.letter {
+  position: relative;
+  max-width: 600px;
+  box-shadow: 4px 4px 20px;
+  border-radius: 0.3em;
 }
 
-.adress{
-    font-size: 20px;
-    margin-left: 4em;
-    margin-top: 9em;
-    position: absolute;
+.receiver {
+  position: absolute;
+  font-size: 20px;
+  margin-left: 3em;
+  margin-top: 7em;
 }
 
-.sender{
-    position: absolute;
-    margin-right: 25em;
-    margin-bottom: 17em;
+.sender {
+  position: absolute;
+  font-size: 17px;
+  margin-right: 26em;
+  margin-bottom: 16em;
 }
 
-.stamp{
-    position: absolute;
-    width: 50px;
-    height: auto;
-    margin-bottom: 17em;
-    margin-left: 30em;
+.stamp {
+  position: absolute;
+  width: 65px;
+  height: auto;
+  margin-bottom: 16em;
+  margin-left: 30em;
 }
 
-p{
-    font-family: 'Inclusive Sans', sans-serif;
-    border-bottom: 1px solid black;
-    margin: 0;
+p {
+  font-family: "Inclusive Sans", sans-serif;
+  font-family: "Just Another Hand", cursive;
+  font-family: "Patrick Hand", cursive;
+  border-bottom: 1px solid black;
+  margin: 0;
 }
